# gl3gs

./: .gitignore  CMakeLists.txt  README.md  build.bat
shaders/: gaussian.frag  gaussian.vert
src/: graphics.cpp  graphics.h  main.cpp  renderer.cpp  renderer.h  ssbo.cpp  ssbo.h
